Training and testing the data

--- a/Question 3.ipynb
+++ b/Question 3.ipynb
@@ -40092,21 +40092,55 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Feature extraction"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def extract_hog_features(images):\n",
+    "    hog_features = []\n",
+    "    for img in images:\n",
+    "        # Calculate HOG features\n",
+    "        features = hog(img, orientations=9, pixels_per_cell=(8, 8), cells_per_block=(2, 2), block_norm='L2-Hys')\n",
+    "        hog_features.append(features)\n",
+    "    return np.array(hog_features)\n",
+    "\n",
+    "# Extract HOG features\n",
+    "defective_hog_features = extract_hog_features(defective_images_normalized)\n",
+    "defectless_hog_features = extract_hog_features(defectless_images_normalized)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train-test split"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Split dataset into training and testing sets\n",
+    "defective_features_train, defective_features_test, defective_labels_train, defective_labels_test = train_test_split(defective_hog_features, defective_labels, test_size=0.2, random_state=42)\n",
+    "defectless_features_train, defectless_features_test, defectless_labels_train, defectless_labels_test = train_test_split(defectless_hog_features, defectless_labels, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Combine features and labels\n",
+    "X_train = np.concatenate((defective_features_train, defectless_features_train), axis=0)\n",
+    "y_train = defective_labels_train + defectless_labels_train\n",
+    "X_test = np.concatenate((defective_features_test, defectless_features_test), axis=0)\n",
+    "y_test = defective_labels_test + defectless_labels_test\n",
+    "\n",
+    "# Shuffle the training data\n",
+    "X_train, y_train = shuffle(X_train, y_train, random_state=42)\n"
+   ]
   },
   {
    "cell_type": "code",
