Edited train and split

--- a/Question 3.ipynb
+++ b/Question 3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40062,7 +40062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40083,7 +40083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40113,7 +40113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40139,22 +40139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split dataset into training and testing sets\n",
     "defective_features_train, defective_features_test, defective_labels_train, defective_labels_test = train_test_split(defective_hog_features, defective_labels, test_size=0.2, random_state=42)\n",
-    "defectless_features_train, defectless_features_test, defectless_labels_train, defectless_labels_test = train_test_split(defectless_hog_features, defectless_labels, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Combine features and labels\n",
-    "X_train = np.concatenate((defective_features_train, defectless_features_train), axis=0)\n",
-    "y_train = defective_labels_train + defectless_labels_train\n",
-    "X_test = np.concatenate((defective_features_test, defectless_features_test), axis=0)\n",
-    "y_test = defective_labels_test + defectless_labels_test\n",
-    "\n",
-    "# Shuffle the training data\n",
-    "X_train, y_train = shuffle(X_train, y_train, random_state=42)"
+    "defectless_features_train, defectless_features_test, defectless_labels_train, defectless_labels_test = train_test_split(defectless_hog_features, defectless_labels, test_size=0.2, random_state=42)"
    ]
   },
   {
